Fix z-index

--- a/Css/style.css
+++ b/Css/style.css
@@ -159,7 +159,7 @@ body {
 }
 
 .tinder--buttons {
-  z-index: 100;
+  z-index: 50;
   flex: 0 0 100px;
   text-align: center;
   padding-top: 20px;
@@ -300,10 +300,7 @@ DISCOVER
 
 /*Set Finished Modal*/
 .end-overlay {
-  display: none;
-  opacity: 0;
-
-  z-index: 90;
+  z-index: 99;
   position: fixed;
   width: 100%;
   height: 100%;
@@ -314,7 +311,7 @@ DISCOVER
 }
 
 .end-modal {
-  z-index: inherit;
+  z-index: 100;
   overflow: scroll;
   position: fixed;
   width: 35%;
@@ -323,9 +320,10 @@ DISCOVER
   top: 50%;
   transform: translate(-50%, -50%);
   background: white;
-  opacity: 1;
-  border-radius: 5px;
-  transition: 0.3s;
+  visibility: hidden;
+  opacity: 0;
+    border-radius: 5px;
+  transition: 0.5s;
   text-align: center;
 }
 
